// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Visual Regression Tests Dark Mode Support renders components in dark mode: dark-mode 1`] = `
<div
  class="dark"
>
  <a
    class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
    href="/properties/1"
  >
    <div
      class="card-interactive"
    >
      <div
        class="relative h-48 sm:h-56 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full group"
        >
          <img
            alt="Beautiful Modern Home - Image 1"
            class="object-cover group-hover:scale-110 transition-transform duration-700"
            loading="lazy"
            sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
            src="/images/property-1.jpg"
          />
          <div
            class="absolute inset-0 bg-gray-200 animate-pulse -z-10"
          />
        </div>
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
        />
        <div
          class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
        >
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
          >
            Për Shitje
          </span>
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
          >
            House
          </span>
        </div>
        <div
          class="absolute top-4 right-4 z-10"
        >
          <button
            class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
            title="Shto në të preferuarat"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="p-5 sm:p-6 flex flex-col flex-1"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <h3
            class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
          >
            Beautiful Modern Home
          </h3>
          <span
            class="text-xl font-black text-primary whitespace-nowrap"
          >
            850 000 €
          </span>
        </div>
        <div
          class="flex items-center text-gray-500 text-sm mb-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span
            class="line-clamp-1 font-medium"
          >
            123 Main St, San Francisco
          </span>
        </div>
        <div
          class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bed h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 4v16"
              />
              <path
                d="M2 8h18a2 2 0 0 1 2 2v10"
              />
              <path
                d="M2 17h20"
              />
              <path
                d="M6 8v9"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              3
               
              <span
                class="hidden sm:inline"
              >
                Dhoma
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bath h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 4 8 6"
              />
              <path
                d="M17 19v2"
              />
              <path
                d="M2 12h20"
              />
              <path
                d="M7 19v2"
              />
              <path
                d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2
               
              <span
                class="hidden sm:inline"
              >
                Banjo
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2200
              m²
            </span>
          </div>
        </div>
        <div
          class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="relative inline-block"
            >
              <button
                class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
                title="View Beautiful Modern Home on map"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-label="Merr udhëzime"
              class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
              title="Merr udhëzime"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-navigation h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="3 11 22 2 13 21 11 13 3 11"
                />
              </svg>
            </button>
          </div>
          <span
            class="btn-primary py-1.5 text-sm group-hover:scale-105"
          >
            Shiko Detajet
          </span>
        </div>
      </div>
    </div>
  </a>
  <div
    class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
  >
    <div
      class="relative mb-4"
    >
      <label
        class="sr-only"
        for="property-search"
      >
        Search properties
      </label>
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        aria-label="Search properties by title, description, or location"
        class="input-field pl-9 sm:pl-10"
        id="property-search"
        placeholder="Kërkoni pasuri..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
    >
      <button
        aria-controls="advanced-filters"
        aria-expanded="false"
        aria-label="Advanced Filters"
        class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-5 w-5 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="font-medium"
        >
          Advanced Filters
        </span>
        <span
          aria-hidden="true"
          class="ml-2 text-sm text-gray-500"
        >
          ▼
        </span>
      </button>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 16-4 4-4-4"
            />
            <path
              d="M17 20V4"
            />
            <path
              d="m3 8 4-4 4 4"
            />
            <path
              d="M7 4v16"
            />
          </svg>
          <select
            aria-label="Sort by"
            class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
            id="sort-by"
            name="sortBy"
          >
            <option
              value=""
            >
              Sort by
            </option>
            <option
              value="price"
            >
              Price
            </option>
            <option
              value="date"
            >
              Date Added
            </option>
            <option
              value="size"
            >
              Size
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests High Contrast Mode renders components in high contrast mode: high-contrast 1`] = `
<div
  class="high-contrast"
>
  <a
    class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
    href="/properties/1"
  >
    <div
      class="card-interactive"
    >
      <div
        class="relative h-48 sm:h-56 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full group"
        >
          <img
            alt="Beautiful Modern Home - Image 1"
            class="object-cover group-hover:scale-110 transition-transform duration-700"
            loading="lazy"
            sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
            src="/images/property-1.jpg"
          />
          <div
            class="absolute inset-0 bg-gray-200 animate-pulse -z-10"
          />
        </div>
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
        />
        <div
          class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
        >
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
          >
            Për Shitje
          </span>
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
          >
            House
          </span>
        </div>
        <div
          class="absolute top-4 right-4 z-10"
        >
          <button
            class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
            title="Shto në të preferuarat"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="p-5 sm:p-6 flex flex-col flex-1"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <h3
            class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
          >
            Beautiful Modern Home
          </h3>
          <span
            class="text-xl font-black text-primary whitespace-nowrap"
          >
            850 000 €
          </span>
        </div>
        <div
          class="flex items-center text-gray-500 text-sm mb-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span
            class="line-clamp-1 font-medium"
          >
            123 Main St, San Francisco
          </span>
        </div>
        <div
          class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bed h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 4v16"
              />
              <path
                d="M2 8h18a2 2 0 0 1 2 2v10"
              />
              <path
                d="M2 17h20"
              />
              <path
                d="M6 8v9"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              3
               
              <span
                class="hidden sm:inline"
              >
                Dhoma
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bath h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 4 8 6"
              />
              <path
                d="M17 19v2"
              />
              <path
                d="M2 12h20"
              />
              <path
                d="M7 19v2"
              />
              <path
                d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2
               
              <span
                class="hidden sm:inline"
              >
                Banjo
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2200
              m²
            </span>
          </div>
        </div>
        <div
          class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="relative inline-block"
            >
              <button
                class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
                title="View Beautiful Modern Home on map"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-label="Merr udhëzime"
              class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
              title="Merr udhëzime"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-navigation h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="3 11 22 2 13 21 11 13 3 11"
                />
              </svg>
            </button>
          </div>
          <span
            class="btn-primary py-1.5 text-sm group-hover:scale-105"
          >
            Shiko Detajet
          </span>
        </div>
      </div>
    </div>
  </a>
  <div
    class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
  >
    <div
      class="relative mb-4"
    >
      <label
        class="sr-only"
        for="property-search"
      >
        Search properties
      </label>
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        aria-label="Search properties by title, description, or location"
        class="input-field pl-9 sm:pl-10"
        id="property-search"
        placeholder="Kërkoni pasuri..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
    >
      <button
        aria-controls="advanced-filters"
        aria-expanded="false"
        aria-label="Advanced Filters"
        class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-5 w-5 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="font-medium"
        >
          Advanced Filters
        </span>
        <span
          aria-hidden="true"
          class="ml-2 text-sm text-gray-500"
        >
          ▼
        </span>
      </button>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 16-4 4-4-4"
            />
            <path
              d="M17 20V4"
            />
            <path
              d="m3 8 4-4 4 4"
            />
            <path
              d="M7 4v16"
            />
          </svg>
          <select
            aria-label="Sort by"
            class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
            id="sort-by"
            name="sortBy"
          >
            <option
              value=""
            >
              Sort by
            </option>
            <option
              value="price"
            >
              Price
            </option>
            <option
              value="date"
            >
              Date Added
            </option>
            <option
              value="size"
            >
              Size
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests MobileNavigation Component renders mobile navigation in closed state 1`] = `
<button
  aria-label="Open menu"
  class="md:hidden fixed top-4 left-4 z-50 p-3 bg-white/90 backdrop-blur-sm rounded-full shadow-lg border border-gray-200 hover:bg-white transition-all duration-200 active:scale-95"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu h-5 w-5 text-gray-700"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
</button>
`;

exports[`Component Visual Regression Tests MobileNavigation Component renders mobile navigation with custom logo 1`] = `
<button
  aria-label="Open menu"
  class="md:hidden fixed top-4 left-4 z-50 p-3 bg-white/90 backdrop-blur-sm rounded-full shadow-lg border border-gray-200 hover:bg-white transition-all duration-200 active:scale-95"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-menu h-5 w-5 text-gray-700"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12h16"
    />
    <path
      d="M4 18h16"
    />
    <path
      d="M4 6h16"
    />
  </svg>
</button>
`;

exports[`Component Visual Regression Tests PropertyCard Component renders property card with all information 1`] = `
<a
  class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
  href="/properties/1"
>
  <div
    class="card-interactive"
  >
    <div
      class="relative h-48 sm:h-56 w-full overflow-hidden"
    >
      <div
        class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
      />
      <div
        class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
      >
        <span
          class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
        >
          Për Shitje
        </span>
        <span
          class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
        >
          House
        </span>
      </div>
      <div
        class="absolute top-4 right-4 z-10"
      >
        <button
          class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
          title="Shto në të preferuarat"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-5 sm:p-6 flex flex-col flex-1"
    >
      <div
        class="flex items-center justify-between mb-1"
      >
        <h3
          class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
        >
          Beautiful Modern Home
        </h3>
        <span
          class="text-xl font-black text-primary whitespace-nowrap"
        >
          850 000 €
        </span>
      </div>
      <div
        class="flex items-center text-gray-500 text-sm mb-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
          />
          <circle
            cx="12"
            cy="10"
            r="3"
          />
        </svg>
        <span
          class="line-clamp-1 font-medium"
        >
          123 Main St, San Francisco
        </span>
      </div>
      <div
        class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bed h-4 w-4 text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4v16"
            />
            <path
              d="M2 8h18a2 2 0 0 1 2 2v10"
            />
            <path
              d="M2 17h20"
            />
            <path
              d="M6 8v9"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            3
             
            <span
              class="hidden sm:inline"
            >
              Dhoma
            </span>
          </span>
        </div>
        <div
          class="flex items-center gap-1.5"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bath h-4 w-4 text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 4 8 6"
            />
            <path
              d="M17 19v2"
            />
            <path
              d="M2 12h20"
            />
            <path
              d="M7 19v2"
            />
            <path
              d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            2
             
            <span
              class="hidden sm:inline"
            >
              Banjo
            </span>
          </span>
        </div>
        <div
          class="flex items-center gap-1.5"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square h-4 w-4 text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            2200
            m²
          </span>
        </div>
      </div>
      <div
        class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
      >
        <div
          class="flex items-center gap-2"
        >
          <div
            class="relative inline-block"
          >
            <button
              class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
              title="View Beautiful Modern Home on map"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-map-pin h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </button>
          </div>
          <button
            aria-label="Merr udhëzime"
            class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
            title="Merr udhëzime"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-navigation h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="3 11 22 2 13 21 11 13 3 11"
              />
            </svg>
          </button>
        </div>
        <span
          class="btn-primary py-1.5 text-sm group-hover:scale-105"
        >
          Shiko Detajet
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`Component Visual Regression Tests Responsive Breakpoints renders components correctly at desktop breakpoint: responsive-layout-desktop 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <a
    class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
    href="/properties/1"
  >
    <div
      class="card-interactive"
    >
      <div
        class="relative h-48 sm:h-56 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full group"
        >
          <img
            alt="Beautiful Modern Home - Image 1"
            class="object-cover group-hover:scale-110 transition-transform duration-700"
            loading="lazy"
            sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
            src="/images/property-1.jpg"
          />
          <div
            class="absolute inset-0 bg-gray-200 animate-pulse -z-10"
          />
        </div>
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
        />
        <div
          class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
        >
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
          >
            Për Shitje
          </span>
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
          >
            House
          </span>
        </div>
        <div
          class="absolute top-4 right-4 z-10"
        >
          <button
            class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
            title="Shto në të preferuarat"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="p-5 sm:p-6 flex flex-col flex-1"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <h3
            class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
          >
            Beautiful Modern Home
          </h3>
          <span
            class="text-xl font-black text-primary whitespace-nowrap"
          >
            850 000 €
          </span>
        </div>
        <div
          class="flex items-center text-gray-500 text-sm mb-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span
            class="line-clamp-1 font-medium"
          >
            123 Main St, San Francisco
          </span>
        </div>
        <div
          class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bed h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 4v16"
              />
              <path
                d="M2 8h18a2 2 0 0 1 2 2v10"
              />
              <path
                d="M2 17h20"
              />
              <path
                d="M6 8v9"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              3
               
              <span
                class="hidden sm:inline"
              >
                Dhoma
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bath h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 4 8 6"
              />
              <path
                d="M17 19v2"
              />
              <path
                d="M2 12h20"
              />
              <path
                d="M7 19v2"
              />
              <path
                d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2
               
              <span
                class="hidden sm:inline"
              >
                Banjo
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2200
              m²
            </span>
          </div>
        </div>
        <div
          class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="relative inline-block"
            >
              <button
                class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
                title="View Beautiful Modern Home on map"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-label="Merr udhëzime"
              class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
              title="Merr udhëzime"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-navigation h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="3 11 22 2 13 21 11 13 3 11"
                />
              </svg>
            </button>
          </div>
          <span
            class="btn-primary py-1.5 text-sm group-hover:scale-105"
          >
            Shiko Detajet
          </span>
        </div>
      </div>
    </div>
  </a>
  <div
    class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
  >
    <div
      class="relative mb-4"
    >
      <label
        class="sr-only"
        for="property-search"
      >
        Search properties
      </label>
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        aria-label="Search properties by title, description, or location"
        class="input-field pl-9 sm:pl-10"
        id="property-search"
        placeholder="Kërkoni pasuri..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
    >
      <button
        aria-controls="advanced-filters"
        aria-expanded="false"
        aria-label="Advanced Filters"
        class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-5 w-5 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="font-medium"
        >
          Advanced Filters
        </span>
        <span
          aria-hidden="true"
          class="ml-2 text-sm text-gray-500"
        >
          ▼
        </span>
      </button>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 16-4 4-4-4"
            />
            <path
              d="M17 20V4"
            />
            <path
              d="m3 8 4-4 4 4"
            />
            <path
              d="M7 4v16"
            />
          </svg>
          <select
            aria-label="Sort by"
            class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
            id="sort-by"
            name="sortBy"
          >
            <option
              value=""
            >
              Sort by
            </option>
            <option
              value="price"
            >
              Price
            </option>
            <option
              value="date"
            >
              Date Added
            </option>
            <option
              value="size"
            >
              Size
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests Responsive Breakpoints renders components correctly at mobile breakpoint: responsive-layout-mobile 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <a
    class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
    href="/properties/1"
  >
    <div
      class="card-interactive"
    >
      <div
        class="relative h-48 sm:h-56 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full group"
        >
          <img
            alt="Beautiful Modern Home - Image 1"
            class="object-cover group-hover:scale-110 transition-transform duration-700"
            loading="lazy"
            sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
            src="/images/property-1.jpg"
          />
          <div
            class="absolute inset-0 bg-gray-200 animate-pulse -z-10"
          />
        </div>
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
        />
        <div
          class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
        >
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
          >
            Për Shitje
          </span>
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
          >
            House
          </span>
        </div>
        <div
          class="absolute top-4 right-4 z-10"
        >
          <button
            class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
            title="Shto në të preferuarat"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="p-5 sm:p-6 flex flex-col flex-1"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <h3
            class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
          >
            Beautiful Modern Home
          </h3>
          <span
            class="text-xl font-black text-primary whitespace-nowrap"
          >
            850 000 €
          </span>
        </div>
        <div
          class="flex items-center text-gray-500 text-sm mb-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span
            class="line-clamp-1 font-medium"
          >
            123 Main St, San Francisco
          </span>
        </div>
        <div
          class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bed h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 4v16"
              />
              <path
                d="M2 8h18a2 2 0 0 1 2 2v10"
              />
              <path
                d="M2 17h20"
              />
              <path
                d="M6 8v9"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              3
               
              <span
                class="hidden sm:inline"
              >
                Dhoma
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bath h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 4 8 6"
              />
              <path
                d="M17 19v2"
              />
              <path
                d="M2 12h20"
              />
              <path
                d="M7 19v2"
              />
              <path
                d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2
               
              <span
                class="hidden sm:inline"
              >
                Banjo
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2200
              m²
            </span>
          </div>
        </div>
        <div
          class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="relative inline-block"
            >
              <button
                class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
                title="View Beautiful Modern Home on map"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-label="Merr udhëzime"
              class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
              title="Merr udhëzime"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-navigation h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="3 11 22 2 13 21 11 13 3 11"
                />
              </svg>
            </button>
          </div>
          <span
            class="btn-primary py-1.5 text-sm group-hover:scale-105"
          >
            Shiko Detajet
          </span>
        </div>
      </div>
    </div>
  </a>
  <div
    class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
  >
    <div
      class="relative mb-4"
    >
      <label
        class="sr-only"
        for="property-search"
      >
        Search properties
      </label>
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        aria-label="Search properties by title, description, or location"
        class="input-field pl-9 sm:pl-10"
        id="property-search"
        placeholder="Kërkoni pasuri..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
    >
      <button
        aria-controls="advanced-filters"
        aria-expanded="false"
        aria-label="Advanced Filters"
        class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-5 w-5 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="font-medium"
        >
          Advanced Filters
        </span>
        <span
          aria-hidden="true"
          class="ml-2 text-sm text-gray-500"
        >
          ▼
        </span>
      </button>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 16-4 4-4-4"
            />
            <path
              d="M17 20V4"
            />
            <path
              d="m3 8 4-4 4 4"
            />
            <path
              d="M7 4v16"
            />
          </svg>
          <select
            aria-label="Sort by"
            class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
            id="sort-by"
            name="sortBy"
          >
            <option
              value=""
            >
              Sort by
            </option>
            <option
              value="price"
            >
              Price
            </option>
            <option
              value="date"
            >
              Date Added
            </option>
            <option
              value="size"
            >
              Size
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests Responsive Breakpoints renders components correctly at tablet breakpoint: responsive-layout-tablet 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <a
    class="group focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 rounded-2xl block"
    href="/properties/1"
  >
    <div
      class="card-interactive"
    >
      <div
        class="relative h-48 sm:h-56 w-full overflow-hidden"
      >
        <div
          class="relative w-full h-full group"
        >
          <img
            alt="Beautiful Modern Home - Image 1"
            class="object-cover group-hover:scale-110 transition-transform duration-700"
            loading="lazy"
            sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
            src="/images/property-1.jpg"
          />
          <div
            class="absolute inset-0 bg-gray-200 animate-pulse -z-10"
          />
        </div>
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-transparent"
        />
        <div
          class="absolute top-4 left-4 flex gap-2 flex-wrap max-w-[calc(100%-2rem)] z-10"
        >
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-blue-100 text-blue-800  border-transparent "
          >
            Për Shitje
          </span>
          <span
            class="inline-flex items-center px-3 py-1.5 rounded-full text-[var(--text-scale-sm)] font-medium transition-colors border bg-slate-100  text-slate-800  border-transparent "
          >
            House
          </span>
        </div>
        <div
          class="absolute top-4 right-4 z-10"
        >
          <button
            class="
        relative p-2.5 rounded-full transition-all duration-300 group
        bg-white/90 backdrop-blur-md text-gray-600 hover:text-red-500 hover:bg-red-50 shadow-md
        hover:scale-110 active:scale-90
        
      "
            title="Shto në të preferuarat"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart h-5 w-5 transition-all duration-300 fill-transparent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="p-5 sm:p-6 flex flex-col flex-1"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <h3
            class="text-lg font-bold text-gray-900 line-clamp-1 group-hover:text-primary transition-colors duration-300 flex-1 mr-2"
          >
            Beautiful Modern Home
          </h3>
          <span
            class="text-xl font-black text-primary whitespace-nowrap"
          >
            850 000 €
          </span>
        </div>
        <div
          class="flex items-center text-gray-500 text-sm mb-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-map-pin h-3.5 w-3.5 mr-1 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
          <span
            class="line-clamp-1 font-medium"
          >
            123 Main St, San Francisco
          </span>
        </div>
        <div
          class="flex flex-wrap items-center gap-4 text-gray-600 mb-5 pb-5 border-b border-gray-100"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bed h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 4v16"
              />
              <path
                d="M2 8h18a2 2 0 0 1 2 2v10"
              />
              <path
                d="M2 17h20"
              />
              <path
                d="M6 8v9"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              3
               
              <span
                class="hidden sm:inline"
              >
                Dhoma
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bath h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 4 8 6"
              />
              <path
                d="M17 19v2"
              />
              <path
                d="M2 12h20"
              />
              <path
                d="M7 19v2"
              />
              <path
                d="M9 5 7.621 3.621A2.121 2.121 0 0 0 4 5v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-5"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2
               
              <span
                class="hidden sm:inline"
              >
                Banjo
              </span>
            </span>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square h-4 w-4 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              2200
              m²
            </span>
          </div>
        </div>
        <div
          class="mt-auto pt-4 border-t border-gray-100 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="relative inline-block"
            >
              <button
                class="
          inline-flex items-center gap-2 font-medium rounded-lg border transition-all duration-200 
          bg-white text-blue-600 hover:bg-blue-50 border-2 border-blue-600 hover:border-blue-700 shadow-sm hover:shadow-md 
          px-3 py-1.5 text-xs 
          z-10 bg-gray-50 hover:bg-gray-100 px-3 py-2 rounded-lg transition-colors border border-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary
          focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          transform hover:scale-105 active:scale-95
        "
                title="View Beautiful Modern Home on map"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-map-pin h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                  />
                  <circle
                    cx="12"
                    cy="10"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-label="Merr udhëzime"
              class="p-2 text-gray-500 hover:text-green-600 hover:bg-green-50 rounded-lg transition-colors border border-gray-200 hover:border-green-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
              title="Merr udhëzime"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-navigation h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="3 11 22 2 13 21 11 13 3 11"
                />
              </svg>
            </button>
          </div>
          <span
            class="btn-primary py-1.5 text-sm group-hover:scale-105"
          >
            Shiko Detajet
          </span>
        </div>
      </div>
    </div>
  </a>
  <div
    class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
  >
    <div
      class="relative mb-4"
    >
      <label
        class="sr-only"
        for="property-search"
      >
        Search properties
      </label>
      <svg
        aria-hidden="true"
        class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        aria-label="Search properties by title, description, or location"
        class="input-field pl-9 sm:pl-10"
        id="property-search"
        placeholder="Kërkoni pasuri..."
        type="text"
        value=""
      />
    </div>
    <div
      class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
    >
      <button
        aria-controls="advanced-filters"
        aria-expanded="false"
        aria-label="Advanced Filters"
        class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-funnel h-5 w-5 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
          />
        </svg>
        <span
          class="font-medium"
        >
          Advanced Filters
        </span>
        <span
          aria-hidden="true"
          class="ml-2 text-sm text-gray-500"
        >
          ▼
        </span>
      </button>
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 16-4 4-4-4"
            />
            <path
              d="M17 20V4"
            />
            <path
              d="m3 8 4-4 4 4"
            />
            <path
              d="M7 4v16"
            />
          </svg>
          <select
            aria-label="Sort by"
            class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
            id="sort-by"
            name="sortBy"
          >
            <option
              value=""
            >
              Sort by
            </option>
            <option
              value="price"
            >
              Price
            </option>
            <option
              value="date"
            >
              Date Added
            </option>
            <option
              value="size"
            >
              Size
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests ResponsiveLayout Component renders responsive layout in full width mode 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <div
    class="p-4"
  >
    Full Width Layout
  </div>
</div>
`;

exports[`Component Visual Regression Tests ResponsiveLayout Component renders responsive layout with header and footer 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <div
    class="p-4"
  >
    Main Content
  </div>
</div>
`;

exports[`Component Visual Regression Tests ResponsiveLayout Component renders responsive layout with sidebar 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <div
    class="p-4"
  >
    <h1>
      Main Content
    </h1>
    <p>
      This is the main content area.
    </p>
  </div>
</div>
`;

exports[`Component Visual Regression Tests ResponsiveLayout Component renders responsive layout without sidebar 1`] = `
<div
  class="min-h-screen bg-white pb-20 sm:pb-0 "
>
  <div
    class="p-4"
  >
    <h1>
      Full Width Content
    </h1>
    <p>
      This content takes the full width.
    </p>
  </div>
</div>
`;

exports[`Component Visual Regression Tests SearchFilters Component renders search filters in mobile layout 1`] = `
<div
  class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
>
  <div
    class="relative mb-4"
  >
    <label
      class="sr-only"
      for="property-search"
    >
      Search properties
    </label>
    <svg
      aria-hidden="true"
      class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <input
      aria-label="Search properties by title, description, or location"
      class="input-field pl-9 sm:pl-10"
      id="property-search"
      placeholder="Kërkoni pasuri..."
      type="text"
      value=""
    />
  </div>
  <div
    class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
  >
    <button
      aria-controls="advanced-filters"
      aria-expanded="false"
      aria-label="Advanced Filters"
      class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-funnel h-5 w-5 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
        />
      </svg>
      <span
        class="font-medium"
      >
        Advanced Filters
      </span>
      <span
        aria-hidden="true"
        class="ml-2 text-sm text-gray-500"
      >
        ▼
      </span>
    </button>
    <div
      class="flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 16-4 4-4-4"
          />
          <path
            d="M17 20V4"
          />
          <path
            d="m3 8 4-4 4 4"
          />
          <path
            d="M7 4v16"
          />
        </svg>
        <select
          aria-label="Sort by"
          class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
          id="sort-by"
          name="sortBy"
        >
          <option
            value=""
          >
            Sort by
          </option>
          <option
            value="price"
          >
            Price
          </option>
          <option
            value="date"
          >
            Date Added
          </option>
          <option
            value="size"
          >
            Size
          </option>
          <option
            value="location"
          >
            Locations
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests SearchFilters Component renders search filters with applied filters 1`] = `
<div
  class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
>
  <div
    class="relative mb-4"
  >
    <label
      class="sr-only"
      for="property-search"
    >
      Search properties
    </label>
    <svg
      aria-hidden="true"
      class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <input
      aria-label="Search properties by title, description, or location"
      class="input-field pl-9 sm:pl-10"
      id="property-search"
      placeholder="Kërkoni pasuri..."
      type="text"
      value=""
    />
  </div>
  <div
    class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
  >
    <button
      aria-controls="advanced-filters"
      aria-expanded="false"
      aria-label="Advanced Filters"
      class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-funnel h-5 w-5 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
        />
      </svg>
      <span
        class="font-medium"
      >
        Advanced Filters
      </span>
      <span
        aria-hidden="true"
        class="ml-2 text-sm text-gray-500"
      >
        ▼
      </span>
    </button>
    <div
      class="flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 16-4 4-4-4"
          />
          <path
            d="M17 20V4"
          />
          <path
            d="m3 8 4-4 4 4"
          />
          <path
            d="M7 4v16"
          />
        </svg>
        <select
          aria-label="Sort by"
          class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
          id="sort-by"
          name="sortBy"
        >
          <option
            value=""
          >
            Sort by
          </option>
          <option
            value="price"
          >
            Price
          </option>
          <option
            value="date"
          >
            Date Added
          </option>
          <option
            value="size"
          >
            Size
          </option>
          <option
            value="location"
          >
            Locations
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Visual Regression Tests SearchFilters Component renders search filters with default state 1`] = `
<div
  class="card p-5 sm:p-6 md:p-8 mb-4 sm:mb-6 md:mb-8 bg-[var(--background)]/95 backdrop-blur-xl transition-shadow duration-500 hover:shadow-2xl"
>
  <div
    class="relative mb-4"
  >
    <label
      class="sr-only"
      for="property-search"
    >
      Search properties
    </label>
    <svg
      aria-hidden="true"
      class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400  h-4 w-4 sm:h-5 sm:w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    <input
      aria-label="Search properties by title, description, or location"
      class="input-field pl-9 sm:pl-10"
      id="property-search"
      placeholder="Kërkoni pasuri..."
      type="text"
      value=""
    />
  </div>
  <div
    class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 mb-4"
  >
    <button
      aria-controls="advanced-filters"
      aria-expanded="false"
      aria-label="Advanced Filters"
      class="flex items-center text-[var(--foreground)] hover:text-[var(--primary)] transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--primary)] focus:ring-offset-2 rounded-md px-2 py-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-funnel h-5 w-5 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
        />
      </svg>
      <span
        class="font-medium"
      >
        Advanced Filters
      </span>
      <span
        aria-hidden="true"
        class="ml-2 text-sm text-gray-500"
      >
        ▼
      </span>
    </button>
    <div
      class="flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-down h-4 w-4 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 16-4 4-4-4"
          />
          <path
            d="M17 20V4"
          />
          <path
            d="m3 8 4-4 4 4"
          />
          <path
            d="M7 4v16"
          />
        </svg>
        <select
          aria-label="Sort by"
          class="px-3 py-1.5 text-sm border border-gray-300  rounded-md outline-none focus-visible:ring-2 focus-visible:ring-primary/50 bg-[var(--background)] text-[var(--foreground)]"
          id="sort-by"
          name="sortBy"
        >
          <option
            value=""
          >
            Sort by
          </option>
          <option
            value="price"
          >
            Price
          </option>
          <option
            value="date"
          >
            Date Added
          </option>
          <option
            value="size"
          >
            Size
          </option>
          <option
            value="location"
          >
            Locations
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
